# we3

./: .env.example  .eslintrc.json  .gitignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_VGPU_TESTING_REPORT.md  CONTRIBUTING.md  COPILOT_OPERATING_MANUAL.md  Cargo.toml  LICENSE  Makefile  README.md  REAL_HARDWARE_VERIFICATION_COMPREHENSIVE_REPORT.md  REQUIREMENTS.md  STATUS.md  ULTIMATE_BREAKTHROUGH_REPORT.md  VGPU_V14_HONEST_ASSESSMENT_FINAL.md  VGPU_V14_HONEST_VERIFICATION_REPORT.md  VGPU_V15_COMPREHENSIVE_REAL_WORKLOAD_TESTING_REPORT.md  VGPU_V15_COMPREHENSIVE_VALIDATION_REPORT.md  all_challenges.md  benchmark_v1.7.py  breakthrough_analytical_engine.py  build_claims_registry.py  ch_2500xx_implementation_system.py  commitlint.config.js  comprehensive_benchmark_system.py  comprehensive_end_to_end_verification.py  comprehensive_real_benchmark_suite.py  comprehensive_verification.py  comprehensive_vgpu_tester.py  docker-compose.yml  enhanced_revolutionary_vgpu_system.py  enhanced_vgpu_v16_performance_engine.py  install_vgpu_v15.py  laws_v1.7.md  mathematical_optimization_showcase.py  memory.md  new_implementations.md  (+32 more)
benchmarks/vgpu_minimal/: Cargo.toml  vgpu_render_256x256.ppm  vgpu_test_report.md
benchmarks/vgpu_minimal/src/: main.rs
deploy/: vgpu_installer.py  (+3 more)
src/experimental_framework/: Cargo.toml
src/experimental_framework/src/: benchmarks.rs  data.rs  experiments.rs  lib.rs  reproducibility.rs
src/formal_proofs/: Cargo.toml
src/formal_proofs/src/: formal_logic.rs  formalization.rs  interactive.rs  lib.rs  meta_theory.rs  proof_search.rs  theorem_prover.rs
src/hybrid_verifier/: Cargo.toml
src/hybrid_verifier/src/: lib.rs  verifier.rs
src/idv_bits/: Cargo.toml
src/idv_bits/benches/: idv_operations.rs
src/idv_bits/src/: density.rs  operations.rs  quantum_inspired.rs  representation.rs  superposition.rs
src/knowledge_compilation/: Cargo.toml
src/knowledge_compilation/benches/: compilation_performance.rs
src/knowledge_compilation/src/: bdd.rs  compilation.rs  dnnf.rs  lib.rs  queries.rs  sdd.rs  zdd.rs
src/tensor_networks/: Cargo.toml
src/tensor_networks/benches/: tensor_contraction.rs
src/tensor_networks/src/: contraction.rs  lib.rs  tensor_train.rs
src/vgpu_shim/: Cargo.toml
src/vgpu_shim/src/: api_interposer.rs  error.rs  lib.rs  memory_manager.rs  performance_monitor.rs  resource_manager.rs  security.rs  task_scheduler.rs  virtual_device.rs
vgpu/1.2/: Cargo.toml  __init__.py
vgpu/1.2/api_intercept/: Cargo.toml
vgpu/1.2/api_intercept/src/: api_registry.rs  cuda_intercept.rs  lib.rs  opencl_intercept.rs  vulkan_intercept.rs
vgpu/1.2/core/: Cargo.toml
vgpu/1.2/core/src/: device.rs  lib.rs  math_engine.rs  memory.rs  readiness_assessment.rs  scheduler.rs
vgpu/1.2/installer/: Cargo.toml
vgpu/1.2/installer/src/: config.rs  installer.rs  main.rs  platform.rs
vgpu/1.2/tests/: comprehensive_validation.rs
vgpu/1.3/: Cargo.toml  README.md  __init__.py  install.sh
vgpu/1.3/api_intercept/: Cargo.toml
vgpu/1.3/api_intercept/src/: cuda_intercept.rs  lib.rs  opencl_intercept.rs  vulkan_intercept.rs
vgpu/1.3/config/: production.toml
vgpu/1.3/core/: Cargo.toml
vgpu/1.3/core/src/: device.rs  error.rs  lib.rs  memory.rs  monitoring.rs  readiness_assessment.rs  scheduler.rs
vgpu/1.3/docs/: DEPLOYMENT.md
vgpu/1.3/infinite_engines/: Cargo.toml
vgpu/1.3/infinite_engines/src/: analytical_gf.rs  infinite_tensors.rs  lib.rs  mathematical_scheduler.rs  parallel_idvbit.rs  superposition_bandwidth.rs  symbolic_storage.rs
vgpu/1.3/installer/: Cargo.toml
vgpu/1.3/installer/src/: lib.rs
vgpu/1.3/tests/: Cargo.toml
vgpu/1.3/tests/benches/: infinite_flops_benchmark.rs
vgpu/1.3/tests/src/: api_compatibility_tests.rs  infinite_computation_tests.rs  integration_tests.rs  lib.rs  mathematical_precision_tests.rs  performance_benchmarks.rs  readiness_validation.rs
vgpu/1.4/: Cargo.toml  README.md  __init__.py  install.sh
vgpu/1.4/api_intercept/: Cargo.toml
vgpu/1.4/api_intercept/src/: lib.rs
vgpu/1.4/breakthrough_engines/: Cargo.toml
vgpu/1.4/breakthrough_engines/src/: lib.rs
vgpu/1.4/core/: Cargo.toml
vgpu/1.4/core/src/: lib.rs  rendering.rs  validation.rs
vgpu/1.4/hybrid_intelligence/: Cargo.toml
vgpu/1.4/hybrid_intelligence/src/: lib.rs
vgpu/1.4/infinite_computing/: Cargo.toml
vgpu/1.4/infinite_computing/src/: analytical_tensors.rs  bandwidth_infinity.rs  lib.rs  mathematical_scheduler.rs  polynomial_transcendence.rs  quantum_amplification.rs  symbolic_idvbit.rs
vgpu/1.4/installer/: Cargo.toml
vgpu/1.4/installer/src/: lib.rs
vgpu/1.4/quantum_transcendence/: Cargo.toml
vgpu/1.4/quantum_transcendence/src/: lib.rs
vgpu/1.4/tests/: Cargo.toml
vgpu/1.4/tests/src/: lib.rs  main.rs
vgpu/1.4/universal_solver/: Cargo.toml
vgpu/1.4/universal_solver/src/: lib.rs  np_complete_solver.rs  optimization_engine.rs  prime_factorization.rs  protein_folding.rs  quantum_simulation.rs  traveling_salesman.rs
vgpu/1.5/: Cargo.toml  __init__.py
vgpu/1.5/advanced_mathematical_cores/: Cargo.toml
vgpu/1.5/bandwidth_revolution/: Cargo.toml
vgpu/1.5/cryptographic_supercomputing/: Cargo.toml
vgpu/1.5/cryptographic_supercomputing/src/: lib.rs
vgpu/1.5/infinite_computing/: Cargo.toml
vgpu/1.5/infinite_computing/src/: lib.rs
vgpu/1.5/minimal_vgpu/: Cargo.toml
vgpu/1.5/minimal_vgpu/src/: main.rs
vgpu/1.5/multi_dimensional_processing/: Cargo.toml
vgpu/1.5/multi_dimensional_processing/src/: lib.rs
vgpu/1.5/near_infinite_engines/: Cargo.toml
vgpu/1.5/near_infinite_engines/src/: lib.rs
vgpu/1.5/quantum_transcendence_v2/: Cargo.toml
vgpu/1.5/rendering_infinity/: Cargo.toml
vgpu/1.5/rendering_infinity/src/: lib.rs
vgpu/1.5/tests/: Cargo.toml
vgpu/1.5/tests/src/: advanced_demo.rs  main.rs
vgpu/1.5/universal_ai_training/: Cargo.toml
vgpu/1.5/universal_ai_training/src/: lib.rs
vgpu/1.9/generating_functions/: Cargo.toml
vgpu/1.9/generating_functions/benches/: coefficient_extraction.rs
vgpu/1.9/generating_functions/src/: algebraic.rs  coefficients.rs  lib.rs  rational.rs
(+498 files in other folders)
