[tool.poetry]
name = "we3"
version = "0.1.0"
description = "Infinite-Superposition Bits Physics/Mathematics Reframing Research"
authors = ["WE3 Research Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "we3", from = "python"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
scipy = "^1.10.0"
sympy = "^1.12"
matplotlib = "^3.7.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
pandas = "^2.0.0"
networkx = "^3.1"
jax = {extras = ["cpu"], version = "^0.4.0"}
torch = "^2.0.0"
scikit-learn = "^1.3.0"
seaborn = "^0.12.0"
tqdm = "^4.65.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.3.0"
nbsphinx = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest-benchmark = "^4.0.0"
memory-profiler = "^0.61.0"
line-profiler = "^4.0.0"
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]