[package]
name = "vgpu_comprehensive_benchmarks"
version = "1.5.0"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rayon = "1.7"
anyhow = "1.0"
ndarray = "0.15"
rustfft = "6.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }