[package]
name = "experimental_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
ndarray = { version = "0.15", features = ["rayon"] }
criterion = { version = "0.5", features = ["html_reports"] }
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.0"
crossbeam = "0.8"
num-traits = "0.2"
statrs = "0.16"
num_cpus = "1.0"
rand = { version = "0.8", features = ["std_rng"] }

# WE3 framework dependencies
generating_functions = { path = "../generating_functions" }
knowledge_compilation = { path = "../knowledge_compilation" }
tensor_networks = { path = "../tensor_networks" }
idv_bits = { path = "../idv_bits" }
god_index = { path = "../god_index" }
hybrid_verifier = { path = "../hybrid_verifier" }
vgpu_shim = { path = "../vgpu_shim" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[[bin]]
name = "experiment_runner"
path = "src/bin/experiment_runner.rs"