[package]
name = "knowledge_compilation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Knowledge compilation engine for Boolean function representations"

[dependencies]
nalgebra.workspace = true
rayon.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "compilation_performance"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]