[workspace]
resolver = "2"
members = [
    "core",
    "api_intercept", 
    "installer"
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
dashmap = "5.5"
parking_lot = "0.12"
rayon = "1.8"
nalgebra = "0.32"
ndarray = "0.15"
num-complex = "0.4"
rand = "0.8"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true