[workspace]
resolver = "2"
members = [
    "core",
    "api_intercept", 
    "infinite_engines",
    "installer",
    "tests",
]

# Shared package metadata
[workspace.package]
version = "1.3.0"
edition = "2021"
authors = ["WE3 Research Team - vGPU v1.3 Infinite FLOPS Framework"]
license = "MIT"
repository = "https://github.com/l142063451/we3"
description = "Infinite FLOPS virtual GPU with mathematical superposition computing"

[workspace.dependencies]
# Core mathematical libraries with infinite precision
num = "0.4"
num-complex = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-bigint = "0.4"
num-rational = "0.4"
nalgebra = { version = "0.32", features = ["sparse"] }
ndarray = { version = "0.15", features = ["blas"] }
approx = "0.5"

# Advanced mathematical computing
rug = "1.24" # Arbitrary precision arithmetic for infinite FLOPS
gmp-mpfr-sys = "1.6" # GNU MP and MPFR system libraries

# Performance and parallelization for infinite scale
rayon = "1.8"
crossbeam = "0.8"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Advanced data structures for infinite bandwidth
bitvec = "1.0"
smallvec = "1.11"
im = "15.1" # Immutable data structures for superposition
dashmap = "5.5" # Concurrent hashmap for infinite state management

# Memory management for infinite operations  
mimalloc = "0.1"

# Mathematical function libraries
special = "0.10" # Special mathematical functions
statrs = "0.16" # Statistical functions

# Symbolic mathematics 
symbolic_expressions = "5.0" # Symbolic computation

# Random number generation with quantum entropy
rand = "0.8"
rand_chacha = "0.3"

# Serialization with mathematical precision
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# FFI for GPU API interception
libc = "0.2"
libloading = "0.8"

# Testing with infinite precision validation
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"

# Error handling with mathematical context
anyhow = "1.0"
thiserror = "1.0"

# Logging and diagnostics
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"



[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true