[package]
name = "api_intercept"
version = "1.3.0"
edition = "2021"
authors = ["WE3 Research Team"]
description = "vGPU v1.3 API interception for CUDA/OpenCL/Vulkan"

[dependencies]
# Use workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tracing.workspace = true
libc.workspace = true
libloading.workspace = true

# Core modules
vgpu_core = { path = "../core" }
infinite_engines = { path = "../infinite_engines" }

[features]
default = ["cuda_intercept", "opencl_intercept", "vulkan_intercept"]
cuda_intercept = []
opencl_intercept = []
vulkan_intercept = []