[package]
name = "vgpu_core"
version = "1.3.0"
edition = "2021"
authors = ["WE3 Research Team"]
description = "vGPU v1.3 Core - Infinite FLOPS virtual GPU with mathematical computing"

[dependencies]
# Use workspace dependencies
num.workspace = true
num-complex.workspace = true
num-traits.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tracing.workspace = true
rayon.workspace = true
dashmap.workspace = true

# Local infinite engines
infinite_engines = { path = "../infinite_engines" }

# System integration
libc.workspace = true
libloading.workspace = true

[features]
default = ["infinite_flops", "mathematical_precision"]
infinite_flops = []
mathematical_precision = []