[package]
name = "infinite_engines"
version = "1.3.0"
edition = "2021"
authors = ["WE3 Research Team"]
description = "Infinite FLOPS mathematical engines for vGPU v1.3"

[dependencies]
# Use workspace dependencies
num.workspace = true
num-complex.workspace = true
num-traits.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
approx.workspace = true
rug.workspace = true
rayon.workspace = true
crossbeam.workspace = true
tokio.workspace = true
async-trait.workspace = true
bitvec.workspace = true
smallvec.workspace = true
im.workspace = true
dashmap.workspace = true
special.workspace = true
statrs.workspace = true
symbolic_expressions.workspace = true
rand.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tracing.workspace = true

# Local framework dependencies
generating_functions = { path = "../../../src/generating_functions" }
tensor_networks = { path = "../../../src/tensor_networks" }
knowledge_compilation = { path = "../../../src/knowledge_compilation" }
idv_bits = { path = "../../../src/idv_bits" }
god_index = { path = "../../../src/god_index" }
hybrid_verifier = { path = "../../../src/hybrid_verifier" }

[features]
default = ["infinite_precision", "parallel_computing"]
infinite_precision = ["rug"]
parallel_computing = ["rayon", "tokio"]