[package]
name = "vgpu_installer"
version = "1.3.0"
edition = "2021"
description = "vGPU v1.3 Infinite FLOPS Framework - Production Installer"

[dependencies]
# Core system libraries
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# System interaction
libc = { workspace = true }
tokio = { workspace = true }

# CLI and configuration
clap = "4.4"
toml = "0.8"
directories = "5.0"
which = "6.0"
num_cpus = "1.16"

# Platform detection
os_info = "3.7"
sys-info = "0.9"

# Networking for downloads
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = "3.8"

# Compression and archives
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

# Process management
subprocess = "0.2"

[[bin]]
name = "vgpu-install"
path = "src/bin/install.rs"

[[bin]]
name = "vgpu-uninstall"
path = "src/bin/uninstall.rs"

[[bin]]
name = "vgpu-configure"
path = "src/bin/configure.rs"