[package]
name = "vgpu-advanced-mathematical-cores"
version = "1.5.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
num-complex = { workspace = true }
num_cpus = { workspace = true }
nalgebra = { workspace = true }