[package]
name = "vgpu-near-infinite-engines"
version = "1.5.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
nalgebra = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }