[package]
name = "vgpu-universal-ai-training"
version = "1.5.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
num-complex = { workspace = true }
num_cpus = { workspace = true }